@@ -18,7 +18,9 @@ package org.vns.javafx.dock.api.demo;
 import javafx.application.Application;
 import static javafx.application.Application.launch;
 import javafx.beans.property.DoubleProperty;
+import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.SimpleDoubleProperty;
+import javafx.beans.property.SimpleIntegerProperty;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
@@ -37,20 +39,20 @@ import javafx.scene.text.Font;
 import javafx.stage.Stage;
 import org.vns.javafx.dock.api.Dockable;
 import org.vns.javafx.dock.api.designer.bean.editor.BooleanPropertyEditor;
-import org.vns.javafx.dock.api.designer.bean.editor.DecimalPropertyEditor_OLD;
-import org.vns.javafx.dock.api.designer.bean.editor.DecimalPropertyEditor;
 import org.vns.javafx.dock.api.designer.bean.editor.PrimitivePropertyEditor.DoublePropertyEditor;
-import org.vns.javafx.dock.api.designer.bean.editor.SimpleStringPropertyEditor;
+import org.vns.javafx.dock.api.designer.bean.editor.PrimitivePropertyEditor.FloatPropertyEditor;
 
 /**
  *
  * @author Valery
  */
-public class TestDecimalPropertyEditor1 extends Application {
+public class TestFloatPropertyEditor extends Application {
 
     @Override
     public void start(Stage stage) throws ClassNotFoundException {
-        System.err.println("Double.valueOf = " + Double.valueOf("1"));
+        String sc = "a";
+        System.err.println("CHAR = '" + new Character(' '));
+        System.err.println("Double.valueOf = " + Double.valueOf("-003."));
         System.err.println("Integer.valueOf = " + Integer.parseInt("-003"));
         Button btn1 = new Button("Button btn1");
         Button btn2 = new Button("Button btn2");
@@ -74,31 +76,24 @@ public class TestDecimalPropertyEditor1 extends Application {
         //System.err.println("font size lb1.getFont().getSize()= " + lb1.getFont().getSize());
         //SliderEditor tf1 = new SliderEditor(0,1,1);
         //DecimalTextField tf1 = new DecimalTextField();
+        System.err.println("11111 " + Double.valueOf("-1."));
         DoubleProperty ip = new SimpleDoubleProperty(27);
-        
-        DecimalPropertyEditor tf1 = new DecimalPropertyEditor(-1d,150d,2);
-        System.err.println("1 btn2.prefWidthProperty() = " + btn2.getPrefWidth());
+        FloatPropertyEditor tf1 = new FloatPropertyEditor();
         tf1.bindBidirectional(btn2.prefWidthProperty());
-        System.err.println("2 btn2.prefWidthProperty() = " + btn2.getPrefWidth());
-        System.err.println("DoublePropertyEditor value=" + tf1.getRightValue());
+        System.err.println("DoublePropertyEditor value=" + tf1.getLastValidText());
+        Number num;
         btn1.setOnAction(e -> {
-            tf1.setText("-210");
-            
-            //btn2.setPrefWidth(50);
-            System.err.println("3 btn2.prefWidthProperty() = " + btn2.getPrefWidth());
-            System.err.println("DoublePropertyEditor value=" + tf1.getRightValue());
-            
+            tf1.setLastValidText("21");
+            System.err.println("DoublePropertyEditor ip=" + ip.get());
         });
 
         Label lb2 = new Label("111111lable 1");
         lb2.setFont(new Font(13));
-        SimpleStringPropertyEditor tf2 = new SimpleStringPropertyEditor("1234");
+//        SimpleStringPropertyEditor tf2 = new SimpleStringPropertyEditor("1234");
 
-        tf2.setFont(new Font(13));
+//        tf2.setFont(new Font(13));
         btn2.setOnAction(e -> {
-            //btn2.setPrefWidth(-20);
-            System.err.println("btn2.prefWidth = " + btn2.getPrefWidth());
-            tf1.setText("50");
+            System.err.println("btn2 Action");
             //btn2.setPrefWidth(200.56);
         });
         Label lb3 = new Label("lable 3");
@@ -116,8 +111,11 @@ public class TestDecimalPropertyEditor1 extends Application {
         grid.add(elb, 0, 1);
         grid.add(ehb, 1, 1);
         grid.add(lb2, 0, 2);
-        grid.add(tf2, 1, 2);
+//        grid.add(tf2, 1, 2);
 
+        btn1.setOnAction(e -> {
+            tf1.setLastValidText("21");
+        });
 
         BooleanPropertyEditor tf3 = new BooleanPropertyEditor();
 
@@ -145,7 +143,7 @@ public class TestDecimalPropertyEditor1 extends Application {
         Stage stage1 = new Stage();
         stage1.initOwner(stage);
 
-        VBox vbox = new VBox(btn1);
+        VBox vbox = new VBox(btn1, btn2);
         VBox propPane = new VBox();
         TilePane tilePane = new TilePane();
         propPane.setStyle("-fx-border-width: 2; -fx-border-color: green");
